# MusicPlayer

./: .gitignore  CMakeLists.txt  README.md
include/decoding/: album.h  artist.h  decoding.h  song.h
include/org/: additional.h  playlist.h  queue.h
include/ui/: ui.h
src/: main.cpp
src/decoding/: album.cpp  song.cpp
src/org/: additional.cpp
src/ui/: ui.cpp
